--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
+    "jquery": "^3.0.0",
     "pg": "^5.1.0",
     "sequelize": "^3.23.3"
   },
