--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "express-favicon": "^1.0.1",
     "express-session": "^1.13.0",
     "jade": "^1.11.0",
     "jquery": "^3.0.0",
