--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs-extra": "^0.30.0",
     "jade": "^1.11.0",
     "jquery": "^3.0.0",
+    "moment": "^2.13.0",
     "pg": "^5.1.0",
     "quickthumb": "0.0.12",
     "sequelize": "^3.23.3",
